<resources>
    <string name="app_name">Up N Out</string>
    <string name="title_home">Account</string>
    <string name="title_dashboard">Events</string>
    <string name="title_createevent">Create Event</string>
    <string name="title_splash">Splash</string>
    <string name="Login">Login</string>
    <string name="description_progress_bar">Loading in progress, please wait.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration">Registration</string>
    <string name="phone_number">Phone number</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="generate_a_random_event">Generate a random event!</string>
    <string name="let_us_choose_an_event_for_you_activate_the_button_below_for_a_random_activity">Let us choose an event for YOU! Activate the button below for a random activity.</string>
    <string name="here_is_your_random_event">Here is your random event!</string>
    <string name="title">Title:</string>
    <string name="description">Description</string>
    <string name="organizer">Organizer:</string>
    <string name="location">Location:</string>
    <string name="start_time">Start time:</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_me_to_this_event">Register me to this event!</string>
    <string name="fill_the_form_below_to_create_a_new_event">Fill the form below to create a new event.</string>
    <string name="create_event">Create event</string>
    <string name="event_title">Event Title:</string>
    <string name="end_date">End date:</string>
    <string name="end_time">End time:</string>
</resources>