<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#9F3F3F"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.upnout.ui.register.RegisterFragment">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="239dp"
        android:layout_height="51dp"
        android:layout_marginTop="64dp"
        android:text="@string/registration"
        android:fontFamily="@font/merienda_bold"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:fontFamily="@font/sofadi_one_font"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/phoneNumber"
        android:fontFamily="@font/sofadi_one_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:autofillHints="phone"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofadi_one_font"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:fontFamily="@font/sofadi_one_font"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:minHeight="48dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/buttonRegister"
        android:fontFamily="@font/sofadi_one_font"
        android:layout_width="142dp"
        android:layout_height="79dp"
        android:textColor="@color/white"
        android:text="@string/register" />

</LinearLayout>