<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_loginFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.upnout.ui.home.HomeFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_eventFragment"
            app:popUpTo="@+id/navigation_home"
            app:destination="@id/navigation_eventFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.upnout.ui.dashboard.DashboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_dashboard_to_loginFragment"
            app:popUpTo="@+id/navigation_dashboard"
            app:destination="@id/navigation_loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_createEventsFragment"
        android:name="com.example.upnout.ui.createevents.CreateEventsFragment"
        android:label="@string/title_createevent"
        tools:layout="@layout/fragment_create_event" />

    <fragment
        android:id="@+id/navigation_splashFragment"
        android:name="com.example.upnout.ui.splash.SplashFragment"
        android:label="Splash"
        tools:layout="@layout/fragment_splash" />

    <fragment
        android:id="@+id/navigation_loginFragment"
        android:name="com.example.upnout.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:popUpTo="@+id/navigation_loginFragment"
            app:destination="@id/navigation_registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_profileFragment"
            app:popUpTo="@+id/navigation_loginFragment"
            app:destination="@id/navigation_profileFragment" />
    </fragment>



    <fragment
        android:id="@+id/navigation_registerFragment"
        android:name="com.example.upnout.ui.register.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:popUpTo="@+id/navigation_registerFragment"
            app:destination="@id/navigation_loginFragment" />
    </fragment>


    <fragment
        android:id="@+id/navigation_profileFragment"
        android:name="com.example.upnout.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/profile_fragment" >
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:popUpTo="@+id/navigation_profileFragment"
            app:destination="@id/navigation_loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_eventFragment"
        android:name="com.example.upnout.ui.event.EventFragment"
        android:label="Event"
        tools:layout="@layout/fragment_event" />

</navigation>