<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.upnout.ui.createevents.CreateEventsFragment">

    <ScrollView
        android:id="@+id/event_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/create_events_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/merienda_bold"
                android:text="@string/fill_the_form_below_to_create_a_new_event"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_create_event_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofadi_one_font"
                    android:text="@string/event_title"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edittext_create_event_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofadi_one_font"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_create_event_description"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/sofadi_one_font"
                    android:text="Event Description:"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofadi_one_font"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_create_event_location"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofadi_one_font"
                    android:text="Location:"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edittext_create_event_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofadi_one_font"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_create_event_start_date"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofadi_one_font"
                    android:text="Start time:"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edittext_create_event_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofadi_one_font"
                    android:ems="10"
                    android:inputType="date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_create_event_start_time"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofadi_one_font"
                    android:text="Start time:"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edittext_create_event_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofadi_one_font"
                    android:ems="10"
                    android:inputType="time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_create_event_end_date"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofadi_one_font"
                    android:text="@string/end_date"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edittext_create_event_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofadi_one_font"
                    android:ems="10"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_create_event_end_time"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofadi_one_font"
                    android:text="@string/end_time"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edittext_create_event_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofadi_one_font"
                    android:ems="10"
                    android:inputType="time" />
            </LinearLayout>

            <Button
                android:id="@+id/button_create_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofadi_one_font"
                android:text="@string/create_event"
                android:textColor="@color/white" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>